--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.sky">
+
+    <!-- *** ДОБАВЛЕНО РАЗРЕШЕНИЕ НА ИНТЕРНЕТ *** -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -11,34 +16,27 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Sky">
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".entryPage" android:exported="true">
-        </activity>
-        <activity android:name=".entryTelegram" android:exported="true">
-        </activity>
-        <activity android:name=".instraction1" android:exported="true">
-        </activity>
-        <activity android:name=".instraction2" android:exported="true">
-        </activity>
-        <activity android:name=".instraction3" android:exported="true">
-        </activity>
-        <activity android:name=".instraction4" android:exported="true">
-        </activity>
-        <activity android:name=".instraction5" android:exported="true">
-        </activity>
-        <activity android:name=".Books" android:exported="true">
-        </activity>
-        <activity android:name=".Music" android:exported="true">
-        </activity>
-        <activity android:name=".Profile" android:exported="true">
-        </activity>
+
+        <!-- Активы -->
+        <activity android:name=".entryPage" android:exported="true" />
+        <activity android:name=".entryTelegram" android:exported="true" />
+        <activity android:name=".instraction1" android:exported="true" />
+        <activity android:name=".instraction2" android:exported="true" />
+        <activity android:name=".instraction3" android:exported="true" />
+        <activity android:name=".instraction4" android:exported="true" />
+        <activity android:name=".instraction5" android:exported="true" />
+        <activity android:name=".Books" android:exported="true" />
+        <activity android:name=".Music" android:exported="true" />
+        <activity android:name=".Profile" android:exported="true" />
+
     </application>
 </manifest>
