Был пересоздан плеер, теперь при нажатии на конкретную карточку с соответствующим id формируется отдельная страница с информацией о книге и все главы, которые есть в google drive, прописанные в бд, посредством краткого id.
То есть сначала программа обращается к id, потом к таблице с аудиозаписями, в которой прописаны по очередности главы, а к этим главам прописано описание в виде краткого ключа к google drive.
Этот краткий ключ, автоматически подставляется в код, когда пользователь определяется с тем какую главу он хочет послушать.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,7 @@
         <activity android:name=".Books" android:exported="true" />
         <activity android:name=".Music" android:exported="true" />
         <activity android:name=".Profile" android:exported="true" />
+        <activity android:name=".BookPage" android:exported="true" />
 
     </application>
 </manifest>
